--- a/package.json
+++ b/package.json
@@ -22,17 +22,19 @@
     "@vitejs/plugin-react-swc": "^3.0.0",
     "eslint": "^8.33.0",
     "eslint-config-prettier": "^8.6.0",
+    "eslint-import-resolver-typescript": "^3.5.3",
     "eslint-plugin-import": "^2.27.5",
     "eslint-plugin-jsx-a11y": "^6.7.1",
     "eslint-plugin-react": "^7.32.2",
     "husky": "^8.0.0",
+    "lint-staged": "^13.1.0",
     "prettier": "^2.8.3",
     "typescript": "^4.9.3",
     "vite": "^4.0.0"
   },
   "lint-staged": {
     "**/*.{ts,tsx}": [
-      "lint"
+      "npm run lint"
     ]
   }
 }
