--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,7 +21,9 @@
     "jsx": "react-jsx"
   },
   "include": [
-    "src"
+    "src",
+    "**/*.ts",
+    "**/*.tsx"
   ],
   "exclude": [
     "node_moduules"
