--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "lint": "eslint . --ext .ts,.tsx",
+    "lint": "eslint --ext .ts,.tsx",
     "dev": "vite",
     "build": "tsc && vite build",
     "preview": "vite preview",
@@ -33,8 +33,14 @@
     "vite": "^4.0.0"
   },
   "lint-staged": {
-    "**/*.{ts,tsx}": [
-      "npm run lint"
+    "**/*.{js,jsx,ts,tsx}": [
+      "npm run lint",
+      "prettier --write"
     ]
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged --debug"
+    }
   }
 }
